# practice

./: .gitignore
cpp_ml/: CMakeLists.txt  build_vs2015_32.bat  build_vs2015_64.bat
cpp_ml/tensorflow/digit_recognition/: digits_recognizer.cpp  digits_recognizer.hpp  main.cpp
cpp_ml/tensorflow/matrix_mul/: main.cpp  matrix_mul.cpp  matrix_mul.h
cpp_ml/tiny-dnn/: CMakeLists.txt
cpp_ml/tiny-dnn/mnist_example/: CMakeLists.txt  digit_recognition.cpp  digit_recognition.h  main.cpp
cpp_ml/tiny-dnn/mnist_jni/: CMakeLists.txt
practice_cmake_repo/: CMakeLists.txt  FindICU.cmake  build_gcc.sh
practice_cmake_repo/compilers/: CMakeLists.txt
practice_cmake_repo/compilers/derivatives_parser/: CMakeLists.txt  main.cpp
practice_cmake_repo/design_patterns/: CMakeLists.txt
practice_cmake_repo/design_patterns/abstract_factory/: CMakeLists.txt  auxiliary.h  main.cpp
practice_cmake_repo/design_patterns/crtp_pattern/: CMakeLists.txt  crpt_test.hpp  main.cpp
practice_cmake_repo/design_patterns/syb_base/: CMakeLists.txt  main.cpp
practice_cmake_repo/design_patterns/syb_modified/: CMakeLists.txt  main.cpp  syb.hpp
practice_cmake_repo/design_patterns/syb_visitor/: CMakeLists.txt
practice_cmake_repo/design_patterns/visitor_loki/: BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  Expression.h  Identifier.cpp  Identifier.h  IdentifierVisitor.cpp  ObjectList.cpp  ObjectList.h  identifierVisitor.h  main.cpp
practice_cmake_repo/dlib_face_detection/: CMakeLists.txt  face_detection_ex.cpp
practice_cmake_repo/gui/: CMakeLists.txt
practice_cmake_repo/gui/qt_table_view/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_table_view.pro  ui_mainwindow.h
practice_cmake_repo/image_processing/: CMakeLists.txt
practice_cmake_repo/image_processing/adaptiveWolfJoilinFilter/: adaptiveWolfJolion.cpp  adaptiveWolfJolion.h  main.cpp
practice_cmake_repo/image_processing/canny_detector/: CMakeLists.txt  main.cpp
practice_cmake_repo/image_processing/cross_circles_detection/: circles_detection.cpp  circles_detection.h  main.cpp
practice_cmake_repo/image_processing/fast_global_smoother_filter/: FastGlobalSmootherFilterCUDA.cu  FastGlobalSmootherFilterCUDA.h  FastGlobalSmootherFilterGPU.cpp  FastGlobalSmootherFilterGPU.h  opencv_contrib_modified_fgs_filter.cpp  opencv_contrib_modified_fgs_filter.h
practice_cmake_repo/image_processing/line_merging/: CMakeLists.txt  line_merging.cpp  line_merging.h  main.cpp
practice_cmake_repo/image_processing/object_detection_open_cv/: CMakeLists.txt  main.cpp
practice_cmake_repo/image_processing/surface_roughness/: CMakeLists.txt  main.cpp  surface_roughness.cpp  surface_roughness.h
practice_cmake_repo/misc/: CMakeLists.txt
practice_cmake_repo/misc/argmax/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/binds/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/boost_program_options/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/boost_serialization/: CMakeLists.txt  base_class.cpp  base_class.h  boost_exports.hpp  derived.cpp  derived.h  main.cpp  polymorphic_portable_binary_iarchive.hpp_old  single_class.h
practice_cmake_repo/misc/chain_exponentiation/: CMakeLists.txt  chain_exp.hpp  main.cpp
practice_cmake_repo/misc/compile_time_map/: CMakeLists.txt  compile_time_list.hpp  generic_map.hpp  main.cpp
practice_cmake_repo/misc/curring/: CMakeLists.txt  capture.hpp  currying.hpp  info.txt  main.cpp
practice_cmake_repo/misc/data_structures/: CMakeLists.txt  container.hpp  list.hpp  main.cc  queue.hpp  stack.hpp
practice_cmake_repo/misc/interate_directory_entries/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/map_conditon/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/matrix_template/: CMakeLists.txt  main.cc  matrix.hpp  test_suite.cc  test_suite.h
practice_cmake_repo/misc/move_assignment/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/multiprecision/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/pipe/: CMakeLists.txt  main.cpp  pipe.cpp  pipe.hpp
practice_cmake_repo/misc/pipe_child/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/read_utf8_file/: CMakeLists.txt  main.cpp  utf8_test.txt
practice_cmake_repo/misc/regexp_unicode/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/test_cases/: CMakeLists.txt  main.cpp
practice_cmake_repo/misc/type_trails/: CMakeLists.txt  container.hpp  funcions.hpp  hash_template.hpp  main.cpp  structs.hpp
practice_cmake_repo/misc/write_utf8_file/: CMakeLists.txt  main.cpp  utf8_test_out.txt
practice_cmake_repo/misc/zip_reader_writer/: CMakeLists.txt  ZipArchiveWriter.cpp  ZipArchiveWriter.h  main.cpp
practice_cmake_repo/network/: CMakeLists.txt
practice_cmake_repo/network/boost_asio_clients/: CMakeLists.txt  exceptions.cpp  expceptions.h  main.cpp  tcp_client.cpp  tcp_client.h
practice_cmake_repo/network/boost_asio_mt_client/: CMakeLists.txt
practice_cmake_repo/network/boost_asio_mt_server/: CMakeLists.txt  connection.hpp  connection_pool.hpp  main.cpp  server.cpp  server.hpp
practice_cmake_repo/network/boost_asio_servers/: CMakeLists.txt  async_tcp_echo_server.cpp  async_tcp_echo_server.h  blocking_echo_server.cpp  blooking_echo_server.h  main.cpp  tcp_server.cpp  tcp_server.h  tcp_server_multi_async.cpp  tcp_server_multi_async.hpp
practice_cmake_repo/network/rest_api_examples/: CMakeLists.txt
practice_cmake_repo/network/rtm_async_client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
practice_cmake_repo/network/rtm_async_common/: CMakeLists.txt  base_id_impl.cpp  base_id_impl.h  base_impl.cpp  base_impl.h  base_task.cpp  base_task.h  connection.cpp  connection.hpp  message.cpp  message.h  message_impl.cpp  message_impl.h  os_info.cpp  os_info.h  os_info_impl.cpp  os_info_impl.h  protocol.hpp  request.cpp  request.hpp  response.cpp  response.hpp  task_builder.cpp  task_builder.h
practice_cmake_repo/network/rtm_async_server/: CMakeLists.txt  main.cpp  (+4 more)
practice_cmake_repo/parallel_patterns/: CMakeLists.txt
practice_cmake_repo/python_fs_xml/: python_fs_xml.py
practice_cmake_repo/sql/: CMakeLists.txt
(+299 files in other folders)
